--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                    <p class="specification">React & Redux</p>
                    <a class="github_link" 
                       title="Code du projet" 
-                      href="" 
+                      href="https://github.com/mouss21/zackprojet11openclass" 
                       target="_blank" 
                       rel="noopener noreferrer">
                      <svg class="github_icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
