--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <p class="about__desc">
           J'ai choisi d'en faire mon métier suite à une reconversion professionnelle. En suivant une formation d'intégration web auprès d'OpenClassrooms, j'ai pu y developper mes compétences en front-end. Travaillant principalement sur les bases <span>HTML/ CSS</span> ainsi que <span>Javascript</span>. 
           Pour aller un peu plus loin, j'ai egalement travaillé sur <span>React</span> et <span>Redux</span>. 
-          Je suis actuellement à la recherche d'un emploi en tant que <span>developpeuse front-end</span>. 
+          Je suis actuellement à la recherche d'un emploi en tant que <span>developpeur front-end</span>. 
           Vous pouvez avoir un aperçu juste en dessous de nombreux projets que j'ai réalisé durant ma formation. 
           N'hésitez pas à aller découvrir ça et si vous souhaitez me contacter le formulaire vous attend en bas de page !
         </p>
